--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>My Awesome deku project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/src/style.css">
-    <script type="module" src="/src/index.js" defer></script>
+    <link rel="stylesheet" href="./src/style.css">
+    <script type="module" src="./src/index.js" defer></script>
   <body>
  </body>
 </html>
