Set base target to _blank

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Ropesnake | Baffalop</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
+    <title>Ropesnake | Baffalop</title>
+
+    <base target="_blank">
+
     <link rel="stylesheet" href="./src/style.css">
     <script type="module" src="./src/index.js" defer></script>
   <body>
