--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Awesome deku project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+
+    <title>Ropesnake | Baffalop</title>
+
+    <base target="_blank">
+
     
     
-  <script type="module" crossorigin src="./assets/index.26e738ed.js"></script>
-  <link rel="stylesheet" href="./assets/index.82b76695.css">
+  <script type="module" crossorigin src="./assets/index.1e5b12cf.js"></script>
+  <link rel="stylesheet" href="./assets/index.31bee53b.css">
 
   <body>
  </body>
